fix: contextmenu out of container

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -26,7 +26,6 @@
       display: none;
       align-items: center;
       justify-content: center;
-      position: absolute;
       padding: 4px;
       border-radius: 6px;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
@@ -41,7 +40,7 @@
         }
         .break {
           height: 1px;
-          margin: 0px;
+          margin: 4px 0px;
           background-color: #a3a3a3;
         }
         .icon {
